# cdflib

./: .appveyor.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.rst  CHANGES.rst  LICENSE  LICENSE.rst  MANIFEST.in  README.md  README.rst  asv.conf.json  cdf_to_xarray.py  cdfwrite.py  meta.yaml  mypy.ini  pyproject.toml  pytest.ini  scratch.py  setup.cfg  setup.py  test.py  test_s3.py  testing.py  tox.ini
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build_docs.yml  ci.yml  conda-build.yaml  pypi-build.yaml  python-lint.yml
archive/: .appveyor.yml
benchmarks/: benchmarks.py
cdflib/: __init__.py  _gzip_wrapper.py  cdf.py  cdf_factory.py  cdf_to_xarray.py  cdfread.py  cdfread_stream.py  cdfwrite.py  dataclasses.py  epochs.py  epochs_astropy.py  gzip_wrapper.py  s3.py  utils.py  xarray_to_cdf.py
cdflib/xarray/: __init__.py  cdf_to_xarray.py  xarray_to_cdf.py
doc/: Makefile  api.rst  changelog.rst  conf.py  development.rst  index.rst  introduction.rst  make.bat  requirements.txt  whatsnew.rst
doc/api/: cdflib.cdfread.CDF.rst  cdfread.rst
doc/modules/: CDF function.rst  apis.rst  cdf_to_xarray.rst  cdfepoch.rst  cdflib.rst  cdfread.rst  cdfwrite.rst  dataclasses.rst  epochs.rst  epochs_astropy.rst  index.rst  xarray.rst  xarray_to_cdf.rst
pds2_cdf/: __init__.py  cdf.py  epochs.py
pds2_cdf/cdfepoch/: CDFepoch.py  __init__.py
requirements/: docs.txt
tests/: conftest.py  test_astropy_epochs.py  test_cdfread.py  test_cdfread_rle.py  test_cdfwrite.py  test_epochs.py  test_xarray_istp_checkers.py  test_xarray_reader_writer.py
tests/testfiles/: de2_ion2s_rpa_19830213_v01.cdf  fa_esa_l2_eeb_00000000_v01.cdf  mms1.cdf  testing_file_location.txt
