[metadata]
name = cdflib
version = 0.3.20
author = MAVEN SDC
author_email = mavensdc@lasp.colorado.edu
description = A python CDF reader toolkit
url = https://github.com/MAVENSDC/cdflib
keywords =
  CDF
  maven
  lasp
  PDS
  GSFC
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3 :: Only
  Topic :: Utilities
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
include_package_data = True
packages = find:
install_requires =
  attrs>=19.2.0
  numpy

[options.extras_require]
tests =
  pytest >= 3.9
  pytest-cov
  coveralls
  flake8
  mypy
  astropy
  hypothesis
docs =
  astropy
  numpydoc
  sphinx<3.1
  sphinx_automodapi

[tool:pytest]
minversion = 3.9
addopts = -ra --cov=cdflib --cov-report=xml
