[metadata]
name = cdflib
author = MAVEN SDC
author_email = mavensdc@lasp.colorado.edu
description = A python CDF reader toolkit
url = https://github.com/MAVENSDC/cdflib
keywords =
  CDF
  maven
  lasp
  PDS
  GSFC
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12
  Programming Language :: Python :: 3 :: Only
  Topic :: Utilities
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.8
include_package_data = True
packages = find:
install_requires =
  numpy >= 1.21

[options.extras_require]
tests =
  astropy
  hypothesis
  pytest >= 3.9
  pytest-cov
  pytest-remotedata
  xarray
  h5netcdf
docs =
  astropy
  xarray
  sphinx
  sphinx-automodapi
  sphinx-copybutton
  sphinx_rtd_theme
dev =
  ipython
  pre-commit

[tool:pytest]
minversion = 3.9
addopts = -ra --cov=cdflib --cov-report=xml
filterwarnings =
  # Astropy emits various warnings when dealing with dates/times, which are
  # not an issue
  ignore:ERFA function
  # This is expected but safe when using binaries compiled with different
  # numpy versions
  ignore:numpy.ndarray size changed

[isort]
balanced_wrapping = True
skip =
default_section = THIRDPARTY
include_trailing_comma = True
known_first_party = cdflib
length_sort = False
line_length = 80
multi_line_output = 3
no_lines_before = LOCALFOLDER
sections = STDLIB, THIRDPARTY, FIRSTPARTY, LOCALFOLDER
